feat(gettingStarted): add how to document your code guide

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,16 +3,15 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "A website for testing",
-    "doc1": "Latin-ish",
-    "Example Page": "Example Page",
+    "tagline": "Microservices made simple",
+    "apidoc": "How to document your code to work with Kintohub",
+    "How to document your code to work with Kintohub": "How to document your code to work with Kintohub",
     "doc2": "document number 2",
     "doc3": "This is document number 3",
     "doc4": "Other Document",
     "doc5": "Fifth Document",
     "Docs": "Docs",
-    "API": "API",
-    "Docusaurus": "Docusaurus",
+    "Getting Started": "Getting Started",
     "First Category": "First Category",
     "Second Category": "Second Category"
   },
