applications, kintoblocks and workspaces text done

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,16 +4,39 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Microservices made simple",
+    "adding-a-dependency": "Adding dependencies to an application",
+    "Adding dependencies to an application": "Adding dependencies to an application",
+    "adding-dependencies-kintoblock": "Adding dependencies to a KintoBlock",
+    "Adding dependencies to a KintoBlock": "Adding dependencies to a KintoBlock",
     "apidoc": "How to document your code to work with Kintohub",
     "How to document your code to work with Kintohub": "How to document your code to work with Kintohub",
-    "doc2": "document number 2",
+    "connecting-a-github-organisation": "connecting-a-github-organisation",
+    "creating-a-kintoblock": "Creating a KintoBlock",
+    "Creating a KintoBlock": "Creating a KintoBlock",
+    "creating-a-workspace": "creating-a-workspace",
+    "creating-an-application": "Creating an application",
+    "Creating an application": "Creating an application",
     "doc3": "This is document number 3",
     "doc4": "Other Document",
     "doc5": "Fifth Document",
+    "leaving-a-workspace": "leaving-a-workspace",
+    "managing-members": "managing-members",
+    "revoking-access": "revoking-access",
+    "tagging-a-commit": "Tagging a commit",
+    "Tagging a commit": "Tagging a commit",
+    "tagging-and-deploying": "Tagging & deploying an application",
+    "Tagging & deploying an application": "Tagging & deploying an application",
+    "talking-to-applications": "Talking to an application",
+    "Talking to an application": "Talking to an application",
+    "what-is-a-kintoblock": "What is a KintoBlock?",
+    "What is a KintoBlock?": "What is a KintoBlock?",
+    "what-is-an-application": "What is an application?",
+    "What is an application?": "What is an application?",
     "Docs": "Docs",
     "Getting Started": "Getting Started",
-    "First Category": "First Category",
-    "Second Category": "Second Category"
+    "Applications": "Applications",
+    "KintoBlocks": "KintoBlocks",
+    "Workspaces": "Workspaces"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
