--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -10,7 +10,8 @@
     "Adding dependencies to a KintoBlock": "Adding dependencies to a KintoBlock",
     "apidoc": "How to document your code to work with Kintohub",
     "How to document your code to work with Kintohub": "How to document your code to work with Kintohub",
-    "connecting-a-github-organisation": "connecting-a-github-organisation",
+    "connecting-a-github-organisation": "Connecting a GitHub organization",
+    "Connecting a GitHub organization": "Connecting a GitHub organization",
     "creating-a-kintoblock": "Creating a KintoBlock",
     "Creating a KintoBlock": "Creating a KintoBlock",
     "creating-a-workspace": "creating-a-workspace",
@@ -19,8 +20,11 @@
     "doc3": "This is document number 3",
     "doc4": "Other Document",
     "doc5": "Fifth Document",
+    "feedback": "feedback",
     "leaving-a-workspace": "leaving-a-workspace",
-    "managing-members": "managing-members",
+    "managing-members": "Managing members’ roles on a project basis",
+    "Managing members’ roles on a project basis": "Managing members’ roles on a project basis",
+    "product-roadmap": "product-roadmap",
     "revoking-access": "revoking-access",
     "tagging-a-commit": "Tagging a commit",
     "Tagging a commit": "Tagging a commit",
@@ -28,6 +32,8 @@
     "Tagging & deploying an application": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
     "Talking to an application": "Talking to an application",
+    "usage-limit": "usage-limit",
+    "use-during-alpha": "use-during-alpha",
     "what-is-a-kintoblock": "What is a KintoBlock?",
     "What is a KintoBlock?": "What is a KintoBlock?",
     "what-is-an-application": "What is an application?",
@@ -36,7 +42,8 @@
     "Getting Started": "Getting Started",
     "Applications": "Applications",
     "KintoBlocks": "KintoBlocks",
-    "Workspaces": "Workspaces"
+    "Workspaces": "Workspaces",
+    "Frequently Asked Questions": "Frequently Asked Questions"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
