--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -20,11 +20,13 @@
     "doc3": "This is document number 3",
     "doc4": "Other Document",
     "doc5": "Fifth Document",
-    "feedback": "feedback",
+    "feedback": "How do I provide feedback?",
+    "How do I provide feedback?": "How do I provide feedback?",
     "leaving-a-workspace": "leaving-a-workspace",
     "managing-members": "Managing members’ roles on a project basis",
     "Managing members’ roles on a project basis": "Managing members’ roles on a project basis",
-    "product-roadmap": "product-roadmap",
+    "product-roadmap": "What's on the product roadmap?",
+    "What's on the product roadmap?": "What's on the product roadmap?",
     "revoking-access": "revoking-access",
     "tagging-a-commit": "Tagging a commit",
     "Tagging a commit": "Tagging a commit",
@@ -32,16 +34,18 @@
     "Tagging & deploying an application": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
     "Talking to an application": "Talking to an application",
-    "usage-limit": "usage-limit",
-    "use-during-alpha": "use-during-alpha",
+    "usage-limit": "Is there a usage limit during alpha testing period?",
+    "Is there a usage limit during alpha testing period?": "Is there a usage limit during alpha testing period?",
+    "use-during-alpha": "Is KintoHub free to use during alpha testing period?",
+    "Is KintoHub free to use during alpha testing period?": "Is KintoHub free to use during alpha testing period?",
     "what-is-a-kintoblock": "What is a KintoBlock?",
     "What is a KintoBlock?": "What is a KintoBlock?",
     "what-is-an-application": "What is an application?",
     "What is an application?": "What is an application?",
     "Docs": "Docs",
     "Getting Started": "Getting Started",
-    "Applications": "Applications",
     "KintoBlocks": "KintoBlocks",
+    "Applications": "Applications",
     "Workspaces": "Workspaces",
     "Frequently Asked Questions": "Frequently Asked Questions"
   },
