--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -9,7 +9,6 @@
     "adding-dependencies-kintoblock": "Adding dependencies to a KintoBlock",
     "Adding dependencies to a KintoBlock": "Adding dependencies to a KintoBlock",
     "apidoc": "How to document your code to work with Kintohub",
-    "How to document your code to work with Kintohub": "How to document your code to work with Kintohub",
     "connecting-a-github-organisation": "Connecting a GitHub organization",
     "Connecting a GitHub organization": "Connecting a GitHub organization",
     "creating-a-kintoblock": "Creating a KintoBlock",
@@ -18,10 +17,12 @@
     "creating-an-application": "Creating an application",
     "Creating an application": "Creating an application",
     "doc3": "This is document number 3",
+    "docker-examples": "Dockerfile examples",
     "doc4": "Other Document",
     "doc5": "Fifth Document",
     "feedback": "How do I provide feedback?",
     "How do I provide feedback?": "How do I provide feedback?",
+    "getting-started": "Getting Started",
     "leaving-a-workspace": "leaving-a-workspace",
     "managing-members": "Managing members’ roles on a project basis",
     "Managing members’ roles on a project basis": "Managing members’ roles on a project basis",
