added some styling

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -13,7 +13,8 @@
     "Connecting a GitHub organization": "Connecting a GitHub organization",
     "creating-a-kintoblock": "Creating a KintoBlock",
     "Creating a KintoBlock": "Creating a KintoBlock",
-    "creating-a-workspace": "creating-a-workspace",
+    "creating-a-workspace": "Creating a workspace",
+    "Creating a workspace": "Creating a workspace",
     "creating-an-application": "Creating an application",
     "Creating an application": "Creating an application",
     "doc3": "This is document number 3",
