Updated images and fixed adding-dependencies-application.md links

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,7 +4,7 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Microservices made simple",
-    "adding-a-dependency": "Adding dependencies to an application",
+    "adding-a-dependency-application": "Adding dependencies to an application",
     "Adding dependencies to an application": "Adding dependencies to an application",
     "adding-dependencies-kintoblock": "Adding dependencies to a KintoBlock",
     "Adding dependencies to a KintoBlock": "Adding dependencies to a KintoBlock",
