--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,14 +4,14 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Microservices made simple",
-    "adding-a-dependency": "Adding dependencies to an application",
+    "adding-a-dependency-application": "Adding dependencies to an application",
     "Adding dependencies to an application": "Adding dependencies to an application",
     "adding-dependencies-kintoblock": "Adding dependencies to a KintoBlock",
     "Adding dependencies to a KintoBlock": "Adding dependencies to a KintoBlock",
     "answers": "Answers",
     "Answers": "Answers",
     "apidoc": "How to document your code to work with Kintohub",
-    "connecting-a-github-organisation": "Connecting a GitHub organization",
+    "connecting-a-github-organization": "Connecting a GitHub organization",
     "Connecting a GitHub organization": "Connecting a GitHub organization",
     "creating-a-kintoblock": "Creating a KintoBlock",
     "Creating a KintoBlock": "Creating a KintoBlock",
