🐛 fix(general): images are not showing

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -23,18 +23,20 @@
     "feedback": "How do I provide feedback?",
     "How do I provide feedback?": "How do I provide feedback?",
     "getting-started": "Getting Started",
-    "leaving-a-workspace": "leaving-a-workspace",
     "managing-members": "Managing members’ roles on a project basis",
     "Managing members’ roles on a project basis": "Managing members’ roles on a project basis",
     "product-roadmap": "What's on the product roadmap?",
     "What's on the product roadmap?": "What's on the product roadmap?",
-    "revoking-access": "revoking-access",
     "tagging-a-commit": "Tagging a commit",
     "Tagging a commit": "Tagging a commit",
     "tagging-and-deploying": "Tagging & deploying an application",
     "Tagging & deploying an application": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
     "Talking to an application": "Talking to an application",
+    "usage-limit": "Is there a usage limit during alpha testing period?",
+    "Is there a usage limit during alpha testing period?": "Is there a usage limit during alpha testing period?",
+    "use-during-alpha": "Is KintoHub free to use during alpha testing period?",
+    "Is KintoHub free to use during alpha testing period?": "Is KintoHub free to use during alpha testing period?",
     "what-is-a-kintoblock": "What is a KintoBlock?",
     "What is a KintoBlock?": "What is a KintoBlock?",
     "what-is-an-application": "What is an application?",
