feat(gettingStarted): improve by adding links to detailed pages

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -10,7 +10,7 @@
     "Adding dependencies to a KintoBlock": "Adding dependencies to a KintoBlock",
     "answers": "Answers",
     "Answers": "Answers",
-    "apidoc": "How to document your code to work with Kintohub",
+    "apidoc": "How to document your code to work with KintoHub",
     "connecting-a-github-organization": "Connecting a GitHub organization",
     "Connecting a GitHub organization": "Connecting a GitHub organization",
     "creating-a-kintoblock": "Creating a KintoBlock",
