--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,6 +4,8 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Microservices made simple",
+    "accounts": "Accounts",
+    "Accounts": "Accounts",
     "adding-a-dependency-application": "Adding dependencies to an application",
     "Adding dependencies to an application": "Adding dependencies to an application",
     "adding-dependencies-kintoblock": "Adding dependencies to a KintoBlock",
@@ -11,6 +13,8 @@
     "answers": "Answers",
     "Answers": "Answers",
     "apidoc": "How to document your code to work with KintoHub",
+    "billing": "Billing",
+    "Billing": "Billing",
     "connecting-a-github-organization": "Connecting a GitHub organization",
     "Connecting a GitHub organization": "Connecting a GitHub organization",
     "creating-a-kintoblock": "Creating a KintoBlock",
@@ -19,14 +23,28 @@
     "Creating a workspace": "Creating a workspace",
     "creating-an-application": "Creating an application",
     "Creating an application": "Creating an application",
+    "custom-params": "Custom Parameters",
+    "Custom Parameters": "Custom Parameters",
+    "deleting-a-kintoblock": "Deleting A KintoBlock",
+    "Deleting A KintoBlock": "Deleting A KintoBlock",
+    "deleting-a-workspace": "Deleting a Workspace",
+    "Deleting a Workspace": "Deleting a Workspace",
+    "deleting-an-application": "Deleting An Application",
+    "Deleting An Application": "Deleting An Application",
     "docker-examples": "Dockerfile examples",
+    "environmental-parameters": "Environmental Parameters",
+    "Environmental Parameters": "Environmental Parameters",
     "feedback": "How do I provide feedback?",
     "How do I provide feedback?": "How do I provide feedback?",
     "getting-started": "Getting Started",
+    "leaving-a-workspace": "Leaving a Workspace",
+    "Leaving a Workspace": "Leaving a Workspace",
     "managing-members": "Managing members’ roles on a project basis",
     "Managing members’ roles on a project basis": "Managing members’ roles on a project basis",
     "product-roadmap": "What's on the product roadmap?",
     "What's on the product roadmap?": "What's on the product roadmap?",
+    "revoking-access": "Revoking Access to a Workspace",
+    "Revoking Access to a Workspace": "Revoking Access to a Workspace",
     "tagging-a-commit": "Tagging a commit",
     "Tagging a commit": "Tagging a commit",
     "tagging-and-deploying": "Tagging & deploying an application",
@@ -37,6 +55,10 @@
     "Is there a usage limit during alpha testing period?": "Is there a usage limit during alpha testing period?",
     "use-during-alpha": "Is KintoHub free to use during alpha testing period?",
     "Is KintoHub free to use during alpha testing period?": "Is KintoHub free to use during alpha testing period?",
+    "viewing-application-logs": "Viewing Application Logs",
+    "Viewing Application Logs": "Viewing Application Logs",
+    "viewing-endpoint-documentation": "Viewing Endpoint Documentation",
+    "Viewing Endpoint Documentation": "Viewing Endpoint Documentation",
     "what-is-a-kintoblock": "What is a KintoBlock?",
     "What is a KintoBlock?": "What is a KintoBlock?",
     "what-is-an-application": "What is an application?",
@@ -44,7 +66,9 @@
     "Getting Started": "Getting Started",
     "KintoBlocks": "KintoBlocks",
     "Applications": "Applications",
+    "Dependencies": "Dependencies",
     "Workspaces": "Workspaces",
+    "Accounts and Billing": "Accounts and Billing",
     "Common Questions": "Common Questions"
   },
   "pages-strings": {
