💖 feat(general): Adding items currently in development
* added new sections to cover future features

* added behind the scenes coming soon section

* some stuff

* removed ids

* removed sidebar title field

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,47 +4,45 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Microservices made simple",
+    "accounts": "Accounts",
     "adding-a-dependency-application": "Adding dependencies to an application",
-    "Adding dependencies to an application": "Adding dependencies to an application",
     "adding-dependencies-kintoblock": "Adding dependencies to a KintoBlock",
-    "Adding dependencies to a KintoBlock": "Adding dependencies to a KintoBlock",
     "answers": "Answers",
-    "Answers": "Answers",
     "apidoc": "How to document your code to work with KintoHub",
+    "behind-the-scenes": "Behind the Scenes",
+    "billing": "Billing",
     "connecting-a-github-organization": "Connecting a GitHub organization",
-    "Connecting a GitHub organization": "Connecting a GitHub organization",
     "creating-a-kintoblock": "Creating a KintoBlock",
-    "Creating a KintoBlock": "Creating a KintoBlock",
     "creating-a-workspace": "Creating a workspace",
-    "Creating a workspace": "Creating a workspace",
     "creating-an-application": "Creating an application",
-    "Creating an application": "Creating an application",
+    "custom-params": "Custom Parameters",
+    "deleting-a-kintoblock": "Deleting A KintoBlock",
+    "deleting-a-workspace": "Deleting a Workspace",
+    "deleting-an-application": "Deleting An Application",
     "docker-examples": "Dockerfile examples",
+    "environmental-parameters": "Environmental Parameters",
     "feedback": "How do I provide feedback?",
-    "How do I provide feedback?": "How do I provide feedback?",
     "getting-started": "Getting Started",
+    "leaving-a-workspace": "Leaving a Workspace",
     "managing-members": "Managing members’ roles on a project basis",
-    "Managing members’ roles on a project basis": "Managing members’ roles on a project basis",
     "product-roadmap": "What's on the product roadmap?",
-    "What's on the product roadmap?": "What's on the product roadmap?",
+    "revoking-access": "Revoking Access to a Workspace",
     "tagging-a-commit": "Tagging a commit",
-    "Tagging a commit": "Tagging a commit",
     "tagging-and-deploying": "Tagging & deploying an application",
-    "Tagging & deploying an application": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
-    "Talking to an application": "Talking to an application",
     "usage-limit": "Is there a usage limit during alpha testing period?",
-    "Is there a usage limit during alpha testing period?": "Is there a usage limit during alpha testing period?",
     "use-during-alpha": "Is KintoHub free to use during alpha testing period?",
-    "Is KintoHub free to use during alpha testing period?": "Is KintoHub free to use during alpha testing period?",
+    "viewing-application-logs": "Viewing Application Logs",
+    "viewing-endpoint-documentation": "Viewing Endpoint Documentation",
     "what-is-a-kintoblock": "What is a KintoBlock?",
-    "What is a KintoBlock?": "What is a KintoBlock?",
     "what-is-an-application": "What is an application?",
-    "What is an application?": "What is an application?",
     "Getting Started": "Getting Started",
     "KintoBlocks": "KintoBlocks",
     "Applications": "Applications",
+    "Dependencies": "Dependencies",
     "Workspaces": "Workspaces",
+    "Accounts and Billing": "Accounts and Billing",
+    "Behind The Scenes": "Behind The Scenes",
     "Common Questions": "Common Questions"
   },
   "pages-strings": {
