✨ feat(general): add session and repository pages

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -6,49 +6,35 @@
     "tagline": "Microservices made simple",
     "accounts": "Accounts",
     "adding-a-dependency-application": "Adding dependencies to an application",
-    "adding-dependencies-kintoblock": "Adding dependencies to a KintoBlock",
     "answers": "Answers",
     "apidoc": "How to document your code to work with KintoHub",
     "behind-the-scenes": "Behind the Scenes",
     "billing": "Billing",
     "connecting-a-github-organization": "Connecting a GitHub organization",
-    "creating-a-kintoblock": "Creating a KintoBlock",
-    "creating-a-workspace": "Creating a workspace",
     "creating-an-application": "Creating an application",
-    "Csharp": "C# / dotnet",
     "custom-params": "Custom Parameters",
     "deleting-a-kintoblock": "Deleting A KintoBlock",
-    "deleting-a-workspace": "Deleting a Workspace",
     "deleting-an-application": "Deleting An Application",
     "docker-examples": "Dockerfile examples",
     "environmental-parameters": "Environmental Parameters",
     "feedback": "How do I provide feedback?",
     "getting-started": "Getting Started",
-    "golang": "Golang",
-    "java": "Java",
-    "leaving-a-workspace": "Leaving a Workspace",
+    "kintoapps": "KintoApps",
+    "kintoblocks": "KintoBlocks",
+    "languages": "Languages",
     "managing-members": "Managing members’ roles on a project basis",
-    "nodejs": "NodeJS",
-    "php": "PHP",
     "product-roadmap": "What's on the product roadmap?",
-    "python": "Python",
-    "revoking-access": "Revoking Access to a Workspace",
-    "ruby": "Ruby",
-    "tagging-a-commit": "Tagging a commit",
+    "release-notes": "Release Notes",
+    "repositories": "Git Repositories",
     "tagging-and-deploying": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
+    "token-session": "Token and Session Management",
     "usage-limit": "Is there a usage limit during alpha testing period?",
     "use-during-alpha": "Is KintoHub free to use during alpha testing period?",
-    "viewing-application-logs": "Viewing Application Logs",
-    "viewing-endpoint-documentation": "Viewing Endpoint Documentation",
-    "what-is-a-kintoblock": "What is a KintoBlock?",
     "what-is-an-application": "What is an application?",
-    "Getting Started": "Getting Started",
-    "KintoBlocks": "KintoBlocks",
-    "Applications": "Applications",
+    "workspaces": "Workspaces",
+    "Docs": "Docs",
     "Dependencies": "Dependencies",
-    "Workspaces": "Workspaces",
-    "Languages": "Languages",
     "Accounts and Billing": "Accounts and Billing",
     "Behind The Scenes": "Behind The Scenes",
     "Common Questions": "Common Questions"
