✨ feat(general) Add Languages pages

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -15,6 +15,7 @@
     "creating-a-kintoblock": "Creating a KintoBlock",
     "creating-a-workspace": "Creating a workspace",
     "creating-an-application": "Creating an application",
+    "Csharp": "C# / dotnet",
     "custom-params": "Custom Parameters",
     "deleting-a-kintoblock": "Deleting A KintoBlock",
     "deleting-a-workspace": "Deleting a Workspace",
@@ -23,10 +24,16 @@
     "environmental-parameters": "Environmental Parameters",
     "feedback": "How do I provide feedback?",
     "getting-started": "Getting Started",
+    "golang": "Golang",
+    "java": "Java",
     "leaving-a-workspace": "Leaving a Workspace",
     "managing-members": "Managing members’ roles on a project basis",
+    "nodejs": "NodeJS",
+    "php": "PHP",
     "product-roadmap": "What's on the product roadmap?",
+    "python": "Python",
     "revoking-access": "Revoking Access to a Workspace",
+    "ruby": "Ruby",
     "tagging-a-commit": "Tagging a commit",
     "tagging-and-deploying": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
@@ -41,6 +48,7 @@
     "Applications": "Applications",
     "Dependencies": "Dependencies",
     "Workspaces": "Workspaces",
+    "Languages": "Languages",
     "Accounts and Billing": "Accounts and Billing",
     "Behind The Scenes": "Behind The Scenes",
     "Common Questions": "Common Questions"
