:alien: feat(Docs): Concepts draft for explaining kintohub

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -10,6 +10,7 @@
     "apidoc": "How to document your code to work with KintoHub",
     "behind-the-scenes": "Behind the Scenes",
     "billing": "Billing",
+    "calling-kintohub-apis": "Calling KintoHub Apis",
     "connecting-a-github-organization": "Connecting a GitHub organization",
     "creating-an-application": "Creating an application",
     "custom-params": "Custom Parameters",
@@ -19,6 +20,7 @@
     "environmental-parameters": "Environmental Parameters",
     "feedback": "How do I provide feedback?",
     "getting-started": "Getting Started",
+    "instant-deployments": "Instant Deployments",
     "kintoapps": "KintoApps",
     "kintoblocks": "KintoBlocks",
     "languages": "Languages",
@@ -26,13 +28,18 @@
     "product-roadmap": "What's on the product roadmap?",
     "release-notes": "Release Notes",
     "repositories": "Git Repositories",
+    "sdk-less-framework": "SDK-Less Framework",
+    "serverless": "serverless",
+    "session-memory": "Session Memory",
     "tagging-and-deploying": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
+    "thinking-kinto": "Thinking Kinto",
     "token-session": "Token and Session Management",
     "usage-limit": "Is there a usage limit during alpha testing period?",
     "use-during-alpha": "Is KintoHub free to use during alpha testing period?",
     "what-is-an-application": "What is an application?",
     "workspaces": "Workspaces",
+    "Concepts": "Concepts",
     "Docs": "Docs",
     "Dependencies": "Dependencies",
     "Accounts and Billing": "Accounts and Billing",
