:alien: feat(ReleaseNotes): 0.2.0 notes.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,26 +4,35 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Microservices made simple",
+    "accesing-endpoints": "Accessing API Endpoints",
     "accounts": "Accounts",
     "adding-a-dependency-application": "Adding dependencies to an application",
+    "advanced-usages": "Advanced Usages",
     "answers": "Answers",
-    "apidoc": "How to document your code to work with KintoHub",
-    "behind-the-scenes": "Behind the Scenes",
+    "apidoc": "How to use KintoHub's Documentation UI",
     "billing": "Billing",
+    "builds-and-run-cmds": "Build & Run Commands",
     "calling-kintohub-apis": "Calling KintoHub Apis",
     "connecting-a-github-organization": "Connecting a GitHub organization",
     "creating-an-application": "Creating an application",
-    "custom-params": "Custom Parameters",
     "deleting-a-kintoblock": "Deleting A KintoBlock",
     "deleting-an-application": "Deleting An Application",
-    "docker-examples": "Dockerfile examples",
+    "deployment-status-history": "Deployment Status",
+    "deployments-introduction": "Introduction",
+    "environment-variables": "Environment Variables",
     "environmental-parameters": "Environmental Parameters",
+    "environments": "Environment",
     "feedback": "How do I provide feedback?",
     "getting-started": "Getting Started",
-    "instant-deployments": "Instant Deployments",
-    "kintoapps": "KintoApps",
+    "kintoapps": "Deployments",
+    "kintoblock-builds": "Git Repository, Builds & CI",
+    "kintoblock-introduction": "Introduction",
     "kintoblocks": "KintoBlocks",
-    "languages": "Languages",
+    "link-repo-resources": "Link to Repository Resources",
+    "manage-blocks": "Manage KintoBlocks",
+    "manage-deployments": "Manage Deployments",
+    "manage-environments": "Manage Environments",
+    "manage-workspace": "Managing Workspaces",
     "managing-members": "Managing members’ roles on a project basis",
     "product-roadmap": "What's on the product roadmap?",
     "release-notes": "Release Notes",
@@ -31,6 +40,7 @@
     "sdk-less-framework": "SDK-Less Framework",
     "serverless": "serverless",
     "session-memory": "Session Memory",
+    "sharing-workspaces": "Sharing Workspaces",
     "tagging-and-deploying": "Tagging & deploying an application",
     "talking-to-applications": "Talking to an application",
     "thinking-kinto": "Thinking Kinto",
@@ -38,12 +48,15 @@
     "usage-limit": "Is there a usage limit during alpha testing period?",
     "use-during-alpha": "Is KintoHub free to use during alpha testing period?",
     "what-is-an-application": "What is an application?",
+    "workspace-intro": "Introduction",
     "workspaces": "Workspaces",
     "Concepts": "Concepts",
+    "Workspaces": "Workspaces",
+    "KintoBlocks": "KintoBlocks",
+    "Deployments": "Deployments",
     "Docs": "Docs",
     "Dependencies": "Dependencies",
     "Accounts and Billing": "Accounts and Billing",
-    "Behind The Scenes": "Behind The Scenes",
     "Common Questions": "Common Questions"
   },
   "pages-strings": {
